logs/Covid_dags/creatableLoad/2022-11-29T015936.890668+0000/1.log
[2022-11-29 01:59:58,663] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T01:59:36.890668+00:00 [queued]>
[2022-11-29 01:59:58,672] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T01:59:36.890668+00:00 [queued]>
[2022-11-29 01:59:58,672] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-11-29 01:59:58,672] {taskinstance.py:1244} INFO - Starting attempt 1 of 2
[2022-11-29 01:59:58,672] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-11-29 01:59:58,687] {taskinstance.py:1264} INFO - Executing <Task(PythonOperator): creatableLoad> on 2022-11-29 01:59:36.890668+00:00
[2022-11-29 01:59:58,692] {standard_task_runner.py:52} INFO - Started process 767 to run task
[2022-11-29 01:59:58,695] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'Covid_dags', 'creatableLoad', 'manual__2022-11-29T01:59:36.890668+00:00', '--job-id', '807', '--raw', '--subdir', 'DAGS_FOLDER/dbtest.py', '--cfg-path', '/tmp/tmpaehbd4ao', '--error-file', '/tmp/tmpudo80645']
[2022-11-29 01:59:58,696] {standard_task_runner.py:77} INFO - Job 807: Subtask creatableLoad
[2022-11-29 01:59:58,751] {logging_mixin.py:109} INFO - Running <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T01:59:36.890668+00:00 [running]> on host acb48b0a6e0d
[2022-11-29 01:59:58,787] {taskinstance.py:1431} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=Covid_dags
AIRFLOW_CTX_TASK_ID=creatableLoad
AIRFLOW_CTX_EXECUTION_DATE=2022-11-29T01:59:36.890668+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-29T01:59:36.890668+00:00
[2022-11-29 01:59:58,790] {taskinstance.py:1718} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dbtest.py", line 104, in creatableLoad
    """
psycopg2.errors.SyntaxError: syntax error at or near "key_as_string"
LINE 4:             key_as_string varchar(50),
                    ^

[2022-11-29 01:59:58,799] {taskinstance.py:1282} INFO - Marking task as UP_FOR_RETRY. dag_id=Covid_dags, task_id=creatableLoad, execution_date=20221129T015936, start_date=20221129T015958, end_date=20221129T015958
[2022-11-29 01:59:58,808] {standard_task_runner.py:92} ERROR - Failed to execute job 807 for task creatableLoad
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dbtest.py", line 104, in creatableLoad
    """
psycopg2.errors.SyntaxError: syntax error at or near "key_as_string"
LINE 4:             key_as_string varchar(50),
                    ^

[2022-11-29 01:59:58,832] {local_task_job.py:154} INFO - Task exited with return code 1
[2022-11-29 01:59:58,853] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
